--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!-- Top controls -->
     <div class="tsp-controls">
       <button class="tsp-button" id="upload-btn">Upload a file</button>
+      <p class="file-name" id="file-nme">No file uploaded</p>
       <button class="tsp-button" id="find-path-btn">Find a path</button>
     </div>
 
@@ -33,6 +34,7 @@
       <div class="visual-frame-title"><strong>Visualisation Frame</strong></div>
       <div class="visual-frame" id="visual-frame">
         <canvas id="tsp-canvas"></canvas>
+        <p class="processing-text" id="processing-txt">Processing...</p>
         <button class="skip-button" id="skip-btn">Skip animation</button>
       </div>
     </section>
