--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
     <!-- Top controls -->
     <div class="tsp-controls">
-      <button class="tsp-button" id="upload-btn">Upload a file</button>
+      <button class="tsp-button" id="upload-btn">Upload</button>
       <p class="file-name" id="file-nme">No file uploaded</p>
-      <button class="tsp-button" id="find-path-btn">Find a path</button>
+      <button class="tsp-button" id="find-path-btn">Start</button>
     </div>
 
     <!-- Hidden file input -->
@@ -41,7 +41,7 @@
 
     <!-- Export controls -->
     <div class="export-section">
-      <button class="tsp-button" id="export-btn">Export found path</button>
+      <button class="tsp-button" id="export-btn">Export</button>
     </div>
   </div>
 </body>
