--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="visual-frame-title"><strong>Visualisation Frame</strong></div>
       <div class="visual-frame" id="visual-frame">
         <canvas id="tsp-canvas"></canvas>
-        <p class="processing-text" id="processing-txt">Processing...</p>
+        <p class="processing-text" id="processing-txt"></p>
         <button class="skip-button" id="skip-btn">Skip animation</button>
       </div>
     </section>
