--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="tsp-controls">
       <button class="tsp-button" id="upload-btn">Upload</button>
       <p class="file-name" id="file-nme">No file uploaded</p>
-      <button class="tsp-button" id="find-path-btn">Start</button>
+      <button class="tsp-button" id="start-stop-btn">Start</button>
     </div>
 
     <!-- Hidden file input -->
