--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
     <!-- Visualisation section -->
     <section class="visual-section">
-      <div class="visual-frame-title"><strong>Visualisation Frame</strong></div>
       <div class="visual-frame" id="visual-frame">
+        <div class="canvas-title"><strong>Visualisation Frame</strong></div>
         <canvas id="tsp-canvas"></canvas>
         <p class="processing-text" id="processing-txt"></p>
         <button class="skip-button" id="skip-btn">Skip animation</button>
