--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <!-- Top controls -->
     <div class="tsp-controls">
       <button class="tsp-button" id="upload-btn">Upload</button>
-      <p class="file-name" id="file-nme">No file uploaded</p>
-      <button class="tsp-button" id="start-stop-btn">Start</button>
+      <p class="file-name" id="file-name">No file uploaded</p>
+      <button class="tsp-button" id="start-stop-btn" disabled>Start</button>
     </div>
 
     <!-- Hidden file input -->
@@ -41,7 +41,7 @@
 
     <!-- Export controls -->
     <div class="export-section">
-      <button class="tsp-button" id="export-btn">Export</button>
+      <button class="tsp-button" id="export-btn" disabled>Export</button>
     </div>
   </div>
 </body>
