--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
       <div class="visual-frame" id="visual-frame">
         <div class="canvas-title"><strong>Visualisation Frame</strong></div>
         <canvas id="tsp-canvas"></canvas>
-        <p class="processing-text" id="processing-txt"></p>
+        <div class="processing-loader" id="processing-loader">
+          <span></span><span></span><span></span>
+        </div>
         <button class="skip-button" id="skip-btn">Skip animation</button>
       </div>
     </section>
