--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
           <span></span><span></span><span></span>
         </div>
         <button class="skip-button" id="skip-btn">Skip animation</button>
+        <p class="distance" id="distance"></p>
       </div>
     </section>
 
